# AleoDotNet

./: .gitignore  AleoDotNet.sln  Directory.Build.props  README.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
Aleo.Crypto/: AleoCrypto.cs
Aleo.Crypto/Interop/: AleoAddressHandle.cs  AleoException.cs  AleoNative.cs  AleoPrivateKeyHandle.cs  AleoRecord.cs  AleoRecordHandle.cs  AleoRecordHandleExtensions.cs  AleoSafeHandle.cs  AleoViewKeyHandle.cs
Aleo.Primitives/: Address.cs
Aleo.Rpc/: AleoRpcClient.cs
Aleo.Sdk/: AleoSdk.cs
Aleo.Tests/: Aleo.Tests.csproj  AleoTests.cs
Aleo.Tests/Crypto/Interop/: AleoAddressHandleTests.cs  AleoNativeTests.cs  AleoPrivateKeyHandleTests.cs  AleoRecordHandleTests.cs  AleoRecordTests.cs  AleoSafeHandleTests.cs  AleoViewKeyHandleTests.cs  NativeTestBase.cs
Aleo.Wallet/: AleoWallet.cs
rust-engine/: Cargo.toml  README.md  build.rs  cbindgen.toml
rust-engine/include/: aleo_dotnet_engine.h
rust-engine/scripts/: build.ps1  build.sh
rust-engine/src/: lib.rs
rust-engine/src/core/: error.rs  memory.rs  mod.rs
rust-engine/src/crypto/: address.rs  keygen.rs  mod.rs  proof.rs  record.rs  signature.rs
rust-engine/src/ffi/: address.rs  keygen.rs  mod.rs  record.rs  transfer.rs  types.rs
rust-engine/src/utils/: conversion.rs  mod.rs
rust-engine/tests/: address_derive_test.rs  crypto_address_test.rs  ffi_test.rs  integration_test.rs  keygen_test.rs
