[package]
name = "aleo-dotnet-engine"
version = "0.1.0"
edition = "2021"
authors = ["AleoDotNet Contributors"]
license = "Apache-2.0"
repository = "https://github.com/kevingy/AleoDotNet"
description = "Native Rust cryptographic engine for AleoDotNet"

[lib]
name = "aleo_dotnet_engine"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
snarkvm = { version = "0.16", features = ["console", "circuit"] }
rand = "0.8"
rand_chacha = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"

[build-dependencies]
cbindgen = "0.26"

[dev-dependencies]
criterion = "0.5"
